2007-12-31  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Copy deployment files to output directory when
	  building the project.

2007-12-28  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/GeneralOptionsPanel.cs, CBinding.addin.xml,
	  Parser/TagDatabaseManager.cs, CBinding.mdp, Project/CProject.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs, gtk-gui/objects.xml,
	  gtk-gui/CBinding.GeneralOptionsPanel.cs, gtk-gui/gui.stetic,
	  Makefile.am: Added a general configuration panel for CBinding where you
	  can choose the default compiler for new C and C++ projects as well as
	  set if you want to parse system tags or not.
	* Compiler/GppCompiler.cs, Compiler/GccCompiler.cs: Changed compiler names.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.mdp: Updated project files. The order of extended properties
	  won't change anymore.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.mdp, Makefile.am: Add missing reference.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.addin.xml, CBinding.mdp, CBinding.mds,
	  CBinding.Autotools/CBinding.Autotools.mdp, Makefile.am: Directory
	  reorganization.

2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.mdp, gtk-gui/gui.stetic: Updated paths.

2007-11-23  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Should fix bug #343098
	
	  gcc/g++ failed if path had white spaces.

2007-11-17  Christian Hergert <christian.hergert@gmail.com> 

	* Gui/EditPackagesDialog.cs: Check if string is null or empty before using
	  it to prevent crash.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/TagDatabaseManager.cs: Track LoggingService API changes.

2007-11-06  Marcos David Marín Amador <MarcosMarin@gmail.com> 
